19-Aug-2017 Fixes #358. Prebuilt tool executables that do not exist at their specified paths on disk now result in an exception being thrown.

02-Jun-2017 ======== Version 1.1.1 Release ========

31-May-2017 Fixes #346. BAM .csproj files and generated package debug projects could not be built in MonoDevelop 7 due to MSBuild's Microsoft.CSharp.Targets not being found. This is a case error, the file should be Microsoft.CSharp.targets.

30-May-2017 Fixes #336. The VisualStudio 2017 redist paths changed sometime between RTM and the 15.2 update. This broke local application deployment. Now using the C runtime version 14.10.25008 for x86 and x64.

16-May-2017 ======== Version 1.1.1 beta 4 Release ========

16-May-2017 Fixes #334. Following tests are now tested in Linux with additional build modes: ObjectiveCTest1 (Native,MakeFile); ProceduralHeaderTest1 (MakeFile); DeltaSettingsTest1 (MakeFile); EmbedStaticIntoDynamicLibrary (MakeFile); PublishingTest1 (MakeFile) and PublishingTest2 (MakeFile). In OSX, these tests are now tested in Xcode build mode: EmbedStaticIntoDynamicLibrary, ProceduralHeaderTest1, ProxyTest.

15-May-2017 Fixes #335. MakeFileBuilder.MakeFileCommonMetaData.Directories and Environment properties are no longer public. Instead, accessors called AddDirectory has been added (ExtendEnvironmentVariables already existed), and utility functions to export both of these to a StringBuilder have been added to the class (ExportEnvironment and ExportDirectories).
